--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,29 @@ baseURL = "https://blog.yelinaung.com/"
 languageCode = "en-us"
 title = "Random stuff"
 theme = "hugo-ink"
+
+# Nav.
+[[menu.main]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[menu.main]]
+name = "All posts"
+url = "/posts"
+weight = 2
+
+[[menu.main]]
+name = "About"
+url = "/about"
+weight = 3
+
+[[menu.main]]
+name = "Tags"
+url = "/tags"
+weight = 4
+
+[[params.social]]
+name = "Github"
+icon = "github"
+url = "https://github.com/yelinaung"
