--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ baseURL = "https://blog.yelinaung.com/"
 languageCode = "en-us"
 title = "Random stuff"
 theme = "hugo-ink"
+pygmentsCodeFences = true
+pygmentsStyle = "xcode"
 
 # Nav.
 [[menu.main]]
@@ -28,3 +30,17 @@ weight = 4
 name = "Github"
 icon = "github"
 url = "https://github.com/yelinaung"
+
+[markup]
+  [markup.highlight]
+    anchorLineNos = false
+    codeFences = true
+    guessSyntax = false
+    hl_Lines = ''
+    lineAnchors = ''
+    lineNoStart = 1
+    lineNos = false
+    lineNumbersInTable = true
+    noClasses = true
+    style = 'monokai'
+    tabWidth = 4
