--- a/config.toml
+++ b/config.toml
@@ -1,52 +1,108 @@
 baseURL = "https://blog.yelinaung.com/"
 languageCode = "en-us"
 title = "Random stuff"
-theme = "hugo-ink"
-pygmentsCodeFences = true
-pygmentsStyle = "xcode"
-pygmentscodefences = true
-pygmentscodefencesguesssyntax = true
+theme = "terminal"
+paginate = 5
+
+[params]
+  # dir name of your main content (default is `content/posts`).
+  # the list of set content will show up on your index page (baseurl).
+  contentTypeName = "posts"
+
+  # ["orange", "blue", "red", "green", "pink"]
+  themeColor = "green"
+
+  # if you set this to 0, only submenu trigger will be visible
+  showMenuItems = 2
+
+  # show selector to switch language
+  showLanguageSelector = false
+
+  # set theme to full screen width
+  fullWidthTheme = false
+
+  # center theme with default width
+  centerTheme = false
+
+  # if your resource directory contains an image called `cover.(jpg|png|webp)`,
+  # then the file will be used as a cover automatically.
+  # With this option you don't have to put the `cover` param in a front-matter.
+  autoCover = true
+
+  # set post to show the last updated
+  # If you use git, you can set `enableGitInfo` to `true` and then post will automatically get the last updated
+  showLastUpdated = false
+
+#pygmentsCodeFences = true
+#pygmentsStyle = "xcode"
+#pygmentscodefences = true
+#pygmentscodefencesguesssyntax = true
 
 [sitemap]
   changefreq = 'daily'
   filename = 'sitemap.xml'
   priority = 0.5
 
-# Nav.
-[[menu.main]]
-name = "Home"
-url = "/"
-weight = 1
+## Nav.
+#[[menu.main]]
+#name = "Home"
+#url = "/"
+#weight = 1
 
-[[menu.main]]
-name = "All posts"
-url = "/posts"
-weight = 2
+#[[menu.main]]
+#name = "All posts"
+#url = "/posts"
+#weight = 2
 
-[[menu.main]]
-name = "About"
-url = "/about"
-weight = 3
+#[[menu.main]]
+#name = "About"
+#url = "/about"
+#weight = 3
 
-[[menu.main]]
-name = "Tags"
-url = "/tags"
-weight = 4
+#[params]
+#subtitle = "My random notes"
+#featherIconsCDN = true
+#mode = "auto" # "dark" or "auto"
 
-[params]
-subtitle = "My random notes"
-featherIconsCDN = true
-mode = "auto" # "dark" or "auto"
+#[[params.social]]
+#name = "Github"
+#icon = "github"
+#url = "https://github.com/yelinaung"
 
-[[params.social]]
-name = "Github"
-icon = "github"
-url = "https://github.com/yelinaung"
+#[[params.social]]
+#name = "RSS"
+#icon = "rss"
+#url = "/index.xml"
 
-[[params.social]]
-name = "RSS"
-icon = "rss"
-url = "/index.xml"
+#[taxonomies]
+#tag = "tags"
 
-[taxonomies]
-tag = "tags"
+[languages]
+  [languages.en]
+    languageName = "English"
+    title = "Random stuff"
+    subtitle = "My random notes"
+    owner = ""
+    keywords = ""
+    copyright = ""
+    menuMore = "Show more"
+    readMore = "Read more"
+    readOtherPosts = "Read other posts"
+    newerPosts = "Newer posts"
+    olderPosts = "Older posts"
+    missingContentMessage = "Page not found..."
+    missingBackButtonLabel = "Back to home page"
+
+    [languages.en.params.logo]
+      logoText = "Random Stuff"
+      logoHomeLink = "/"
+
+    [languages.en.menu]
+      [[languages.en.menu.main]]
+        identifier = "about"
+        name = "About"
+        url = "/about"
+      [[languages.en.menu.main]]
+        identifier = "tags"
+        name = "Tags"
+        url = "/tags"
