--- a/config.toml
+++ b/config.toml
@@ -46,3 +46,8 @@ url = "/index.xml"
 
 [taxonomies]
 tag = "tags"
+
+[sitemap]
+  changefreq = 'daily'
+  filename = 'sitemap.xml'
+  priority = 0.5
