--- a/config.toml
+++ b/config.toml
@@ -34,6 +34,7 @@ subtitle = "My random notes"
 featherIconsCDN = true
 mode = "auto" # "dark" or "auto"
 description = "A place where I write down stuff - what I've learned recently, my learning progress, interesting topics, books, wins/losses"
+author = "Ye Lin Aung"
 
 [[params.social]]
 name = "Github"
