--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ pygmentsStyle = "xcode"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 paginate = 5
+enableRobotsTXT = true
 
 # Nav.
 [[menu.main]]
