--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 title = "Ye Lin's Random stuff"
 theme = "hugo-ink"
 pygmentsCodeFences = true
-pygmentsStyle = "xcode"
+pygmentsStyle = "solarized-light"
 pygmentscodefences = true
 pygmentscodefencesguesssyntax = true
 paginate = 5
